修复Render部署路径问题：添加根目录入口文件index.js

--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "blog-backend",
+  "name": "fullstack-blog-backend",
   "version": "1.0.0",
+  "description": "全栈博客系统后端API",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "build": "cd server && npm install",
+    "postinstall": "cd server && npm install"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "uuid": "^9.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
