修复Render端口绑定问题：绑定到0.0.0.0端口并添加详细日志

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "cd server && npm install",
+    "build": "npm install",
     "postinstall": "cd server && npm install"
   },
   "dependencies": {
