--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,3 @@
 # 生产环境变量
-REACT_APP_API_URL=https://your-backend-url.railway.app/api
+REACT_APP_API_URL=https://whs-fullstack-blog-system.onrender.com
 GENERATE_SOURCEMAP=false
