--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,10 +1,13 @@
 {
   "version": 2,
-  "name": "blog-frontend",
-  "buildCommand": "npm install && npm run build",
+  "name": "fullstack-blog-frontend",
+  "framework": "create-react-app",
+  "buildCommand": "npm run build",
   "outputDirectory": "build",
   "installCommand": "npm install",
-  "framework": "create-react-app",
+  "env": {
+    "REACT_APP_API_URL": "https://whs-fullstack-blog-system.onrender.com"
+  },
   "routes": [
     {
       "src": "/static/(.*)",
