修复前端API路径配置：添加/api后缀到环境变量

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,3 @@
 # 生产环境变量
-REACT_APP_API_URL=https://whs-fullstack-blog-system.onrender.com
+REACT_APP_API_URL=https://whs-fullstack-blog-system.onrender.com/api
 GENERATE_SOURCEMAP=false
