--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,19 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["blog", "api", "express", "node"],
+  "keywords": [
+    "blog",
+    "api",
+    "express",
+    "node"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.49.8",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.15.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
