--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,26 +2,21 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "server-supabase.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server.js"
+      "dest": "server-supabase.js"
     },
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "server-supabase.js"
     }
   ],
   "env": {
     "NODE_ENV": "production"
-  },
-  "functions": {
-    "server.js": {
-      "maxDuration": 10
-    }
   }
 }
