--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,10 +1,12 @@
 {
   "version": 2,
+  "name": "fullstack-blog-frontend",
   "framework": "create-react-app",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "installCommand": "npm install",  "env": {
-    "REACT_APP_API_URL": "https://whs-fullstack-blog-system.onrender.com/api"
+  "installCommand": "npm install",
+  "env": {
+    "REACT_APP_API_URL": "https://fullstack-blog-backend.vercel.app/api"
   },
   "routes": [
     {
@@ -15,5 +17,9 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "github": {
+    "enabled": true,
+    "autoAlias": true
+  }
 }
